examples/valid/03_generic_functions_and_literals.lane
module Examples.Valid03

fn[A] choose(cond : Bool, left : A, right : A) -> A {
  if cond {
    left
  } else {
    right
  }
}

pub fn use_local_id(value : Int) -> Int {
  let id = fn[A] (x : A) {
    x
  }
  id(value)
}

pub fn check_expected_function() -> Int {
  let f : (Int) -> Int = fn (x) {
    x
  }
  f(1)
}
