examples/invalid/38_explicit_generic_function_arity.lane
module Examples.Invalid.ExplicitGenericFunctionArity

fn[A] id(value : A) -> A {
  value
}

let value : Int = id[Int, Bool](1)
